fix overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,6 @@
   max-height:50vh;
   overflow-y:auto;
 }
-p.me {
+p {
   overflow-x:auto;
 }
